tests/ui/state/require_same_object_state.stderr
error[E0277]: the trait bound `OtherState: krator::State<PodState>` is not satisfied
  --> $DIR/require_same_object_state.rs:48:9
   |
48 |         Transition::next(self, OtherState)
   |         ^^^^^^^^^^^^^^^^ the trait `krator::State<PodState>` is not implemented for `OtherState`
   |
   = help: the following implementations were found:
             <OtherState as krator::State<OtherPodState>>
   = note: required by `krator::Transition::<S>::next`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
